c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/scalar_initializer_for_array.c
int main(void)
{
    // You can't initialize an array with a scalar expression.
    int arr[1] = 4;
    return arr[0];
}